--- a/requirements.txt
+++ b/requirements.txt
@@ -6,13 +6,15 @@ easydict
 opencv-contrib-python
 Cython
 pillow
-h5py
 lmdb
 mahotas
 pandas
 requests
-web.py==0.40.dev0
+web.py==0.61
 pika
 matplotlib
 lxml
 bs4
+tensorflow==1.13.1
+keras==2.1.6
+h5py==2.10.0
